# ros_rainbow_new_bridge

PolarisRanger900XP/: manifest.xml
PolarisRanger900XP/launch/: display.launch  display_both.launch  display_both_v1.launch  display_both_v1.launch~  display_original.launch  gazebo.launch  polaris_hubo.rviz
PolarisRanger900XP/robots/: PolarisRanger900XP.URDF  PolarisRanger900XP_original.URDF~
drchubo_new_head/drchubo/: CMakeLists.txt  package.xml
drchubo_new_head/drchubo_v3/: CMakeLists.txt  package.xml  urdf.rviz
drchubo_new_head/drchubo_v3/config/: drchubo_v3_params.yaml
drchubo_new_head/drchubo_v3/launch/: display.launch~  display_mod.launch  display_mod.launch~  gazebo.launch
drchubo_new_head/drchubo_v3/robots/: drchubo-rightside.urdf  drchubo_new_head.urdf  drchubo_v3.kinbody.xml  drchubo_v3.robot.xml  drchubo_v3.urdf  drchubo_v3.urdf~  drchubo_v3_ORIginal.urdf  drchubo_v3_ORIginal.urdf~
drchubo_new_head/python/: mapping.py  process_urdf.py
hubo_head_description/: manifest.xml
hubo_head_description/launch/: depth_PS1080_PrimeSense.yaml  display.launch  gazebo.launch  hubo_head_description.launch  primesense_ir.yaml  primesense_ir_2.yaml  primesense_rgb.yaml  primesense_rgb_2.yaml
hubo_head_description/meshes/: head_base_link.STL  turret_pan_link.STL  turret_tilt_link.STL
hubo_head_description/robots/: hubo_head_description.URDF~
hubo_kart_display_v1/: CMakeLists.txt  package.xml
hubo_kart_display_v1/launch/: display_both.launch  (+3 more)
hubo_state_publisher/: CMakeLists.txt~  package.xml
red_recog/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+16 files in other folders)
